# learn-agent

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.yaml  experiments.py  main.py  output_markdown.md  pyproject.toml  test.py  todo.md
.github/instructions/: python-project-conventions.instructions.md  python-rag-preferences.instructions.md
experiments/: markitdown_exp.py  mem0_exp.py  mineru_exp.py
qdrant/config/: production.yaml
src/agent/: rag_agent.py
src/agent/prompts/: __init__.py  main_agent.md
src/agent/tools/: document_retriever.py
src/api/: __init__.py
src/api/routes/: __init__.py
src/api/routes/chat/: __init__.py
src/config/: bootstrap.py  constants.py  env.py  logger.py  mem0_config.py
src/db/: __init__.py
src/db/models/: __init__.py  chat.py  chunk.py  document.py  project.py  project_document.py  thread.py  user.py
src/lib/: docling_lib.py  embeddings.py  mem0_lib.py  ollama_vision.py  paper_fingerprint.py  pix2tex_ocr.py
src/module/: rag_agent.py  upload_docs.py
src/utils/: argon2_utils.py  textsplitters.py  time_utils.py  usage_aggregator_callback.py
src/vector_store/: faiss_store.py  qdrant_store.py
