[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "certifi>=2026.2.25",
    "docling>=2.88.0",
    "faiss-cpu>=1.13.2",
    "fastembed>=0.7.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mineru>=0.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "mem0ai>=1.0.11",
    "nltk>=3.9.4",
    "pix2tex>=0.1.4",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
]
